dienst2/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dienst2
  name: dienst2
  namespace: default
  annotations:
    fluxcd.io/automated: 'true'
    fluxcd.io/tag.elasticsearch: semver:~2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: dienst2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        ad.datadoghq.com/gunicorn.check_names: '["gunicorn"]'
        ad.datadoghq.com/gunicorn.init_configs: '[{}]'
        ad.datadoghq.com/gunicorn.logs: '[{"source": "gunicorn", "service": "dienst2",
          "log_processing_rules": [{"type": "multi_line", "name": "log_start_with_date",
          "pattern" : "\\d{4}-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])"}]}]'
      labels:
        app: dienst2
    spec:
      containers:
      - args:
        - gunicorn
        - --workers=4
        image: ghcr.io/wisvch/dienst2:20221203-95e6b7a
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 2
        name: gunicorn
        ports:
        - containerPort: 8000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 400m
            memory: 512Mi
          requests:
            cpu: 400m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - command:
        - elasticsearch
        - -Des.network.host=127.0.0.1
        image: elasticsearch:2.4.6
        imagePullPolicy: Always
        name: elasticsearch
        resources:
          limits:
            cpu: 100m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 300Mi
        securityContext:
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: elasticsearch-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        secret:
          defaultMode: 420
          secretName: dienst2
      - emptyDir: {}
        name: elasticsearch-data
