dienst2/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dienst2
  name: dienst2
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: dienst2
  sessionAffinity: None
  type: ClusterIP
